Add basic styling to page
Added background color to book cover container to
make it easier to see; will remove this later on

--- a/index.html
+++ b/index.html
@@ -8,49 +8,50 @@
     <title>Library</title>
   </head>
   <body>
-      <div class="header">
-        <h1>My Library</h1>
-        <div class="header-buttons">
-          <button class="add-book">＋</button>
-          <button class="remove-book">🗑</button>
-        </div>
-      </div>
-
-      <div class="card-container">
-        <div class="card">
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">To Kill a Mockingbird</h2>
-            <p class="author">Harper</p>
-            <p class="page-count">336</p>
-            <p class="read">Not Read</p>
+      <div class="container">
+        <div class="header">
+          <h1>My Library</h1>
+          <div class="header-buttons">
+            <button class="add-book">＋</button>
+            <button class="remove-book">🗑</button>
           </div>
         </div>
-        <div class="card">
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">The Alchemist</h2>
-            <p class="author">Paulo Coelho</p>
-            <p class="page-count">208</p>
-            <p class="read">Read</p>
+        <div class="card-container">
+          <div class="card">
+            <div class="book-cover"></div>
+            <div class="book-details">
+              <h2 class="book-title">To Kill a Mockingbird</h2>
+              <p class="author">Harper</p>
+              <p class="page-count">336</p>
+              <p class="read">Not Read</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">The Catcher in the Rye</h2>
-            <p class="author">J.D. Salinger</p>
-            <p class="page-count">288</p>
-            <p class="read">Not Read</p>
+          <div class="card">
+            <div class="book-cover"></div>
+            <div class="book-details">
+              <h2 class="book-title">The Alchemist</h2>
+              <p class="author">Paulo Coelho</p>
+              <p class="page-count">208</p>
+              <p class="read">Read</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
-            <p class="author">Robert C. O'Brien</p>
-            <p class="page-count">233</p>
-            <p class="read">Read</p>
+          <div class="card">
+            <div class="book-cover"></div>
+            <div class="book-details">
+              <h2 class="book-title">The Catcher in the Rye</h2>
+              <p class="author">J.D. Salinger</p>
+              <p class="page-count">288</p>
+              <p class="read">Not Read</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="book-cover"></div>
+            <div class="book-details">
+              <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
+              <p class="author">Robert C. O'Brien</p>
+              <p class="page-count">233</p>
+              <p class="read">Read</p>
+            </div>
           </div>
         </div>
       </div>
