Fix typo in author's name
Harper -> Harper Lee

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="book-cover"></div>
             <div class="book-details">
               <h2 class="book-title">To Kill a Mockingbird</h2>
-              <p class="author">Harper</p>
+              <p class="author">Harper Lee</p>
               <p class="page-count">336</p>
               <p class="read">Not Read</p>
             </div>
