--- a/index.html
+++ b/index.html
@@ -8,52 +8,80 @@
     <title>Library</title>
   </head>
   <body>
-      <div class="container">
-        <div class="header">
-          <h1>My Library</h1>
-          <div class="header-buttons">
-            <button class="add-book">＋</button>
-            <button class="remove-book">🗑</button>
+    <div class="container">
+      <div class="header">
+        <h1>My Library</h1>
+
+        <div class="header-buttons">
+          <button class="add-book">＋</button>
+          <button class="remove-book">🗑</button>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+          <div class="book-cover"></div>
+          <div class="book-details">
+            <h2 class="book-title">To Kill a Mockingbird</h2>
+            <h3 class="author">Harper Lee</h3>
+            <p class="page-count">336</p>
+            <p class="read">Not Read</p>
           </div>
         </div>
-        <div class="card-container">
-          <div class="card">
-            <div class="book-cover"></div>
-            <div class="book-details">
-              <h2 class="book-title">To Kill a Mockingbird</h2>
-              <p class="author">Harper Lee</p>
-              <p class="page-count">336</p>
-              <p class="read">Not Read</p>
-            </div>
+
+        <div class="card">
+          <div class="book-cover"></div>
+          <div class="book-details">
+            <h2 class="book-title">The Alchemist</h2>
+            <h3 class="author">Paulo Coelho</h3>
+            <p class="page-count">208</p>
+            <p class="read">Read</p>
           </div>
-          <div class="card">
-            <div class="book-cover"></div>
-            <div class="book-details">
-              <h2 class="book-title">The Alchemist</h2>
-              <p class="author">Paulo Coelho</p>
-              <p class="page-count">208</p>
-              <p class="read">Read</p>
-            </div>
+        </div>
+
+        <div class="card">
+          <div class="book-cover"></div>
+          <div class="book-details">
+            <h2 class="book-title">The Catcher in the Rye</h2>
+            <h3 class="author">J.D. Salinger</h3>
+            <p class="page-count">288</p>
+            <p class="read">Not Read</p>
           </div>
-          <div class="card">
-            <div class="book-cover"></div>
-            <div class="book-details">
-              <h2 class="book-title">The Catcher in the Rye</h2>
-              <p class="author">J.D. Salinger</p>
-              <p class="page-count">288</p>
-              <p class="read">Not Read</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="book-cover"></div>
-            <div class="book-details">
-              <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
-              <p class="author">Robert C. O'Brien</p>
-              <p class="page-count">233</p>
-              <p class="read">Read</p>
-            </div>
+        </div>
+        
+        <div class="card">
+          <div class="book-cover"></div>
+          <div class="book-details">
+            <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
+            <h3 class="author">Robert C. O'Brien</h3>
+            <p class="page-count">233</p>
+            <p class="read">Read</p>
           </div>
         </div>
       </div>
+
+      <dialog id="modal">
+        <h4>Add a book to your library:</h4>
+        <form method="dialog">
+          <fieldset class="book-inputs">
+            <label for="title">Book Title</label>
+            <input type="text" id="title" required>
+            <label for="author">Author</label>
+            <input type="text" id="author"  required>
+            <label for="page-count">No. of Pages</label>
+            <input type="number" id="page-count" min="1"  required>
+            <label for="is-read">
+              <input type="checkbox" id="is-read">
+              I have read this book
+            </label>
+          </fieldset>
+
+          <div class="form-buttons">
+            <button id="cancel">Cancel</button>
+            <button id="add">Add</button>
+          </div>
+        </form>
+      </dialog>
+    </div>
   </body>
 </html>
