Enable "Add Book" functionality

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <div class="form-buttons">
             <button id="cancel">Cancel</button>
-            <button id="add">Add</button>
+            <button id="add" value="add">Add</button>
           </div>
         </form>
       </dialog>
