--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       <div class="card-container">
         <div class="card">
+          <button class="remove-card">☓</button>
           <div class="book-cover"></div>
           <div class="book-details">
             <h2 class="book-title">To Kill a Mockingbird</h2>
@@ -29,6 +30,7 @@
         </div>
 
         <div class="card">
+          <button class="remove-card">☓</button>
           <div class="book-cover"></div>
           <div class="book-details">
             <h2 class="book-title">The Alchemist</h2>
@@ -39,6 +41,7 @@
         </div>
 
         <div class="card">
+          <button class="remove-card">☓</button>
           <div class="book-cover"></div>
           <div class="book-details">
             <h2 class="book-title">The Catcher in the Rye</h2>
@@ -49,6 +52,7 @@
         </div>
         
         <div class="card">
+          <button class="remove-card">☓</button>
           <div class="book-cover"></div>
           <div class="book-details">
             <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
