Add toggle read status button to default cards

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <p class="page-count">336</p>
             <p class="read">Not Read</p>
           </div>
+          <button class="toggle-read">᠆</button>
         </div>
 
         <div class="card">
@@ -38,6 +39,7 @@
             <p class="page-count">208</p>
             <p class="read">Read</p>
           </div>
+          <button class="toggle-read">🗸</button>
         </div>
 
         <div class="card">
@@ -49,6 +51,7 @@
             <p class="page-count">288</p>
             <p class="read">Not Read</p>
           </div>
+          <button class="toggle-read">᠆</button>
         </div>
         
         <div class="card">
@@ -60,6 +63,7 @@
             <p class="page-count">233</p>
             <p class="read">Read</p>
           </div>
+          <button class="toggle-read">🗸</button>
         </div>
       </div>
 
