--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Chocolate+Classical+Sans&family=Lexend:wght@100..900&family=Ranchers&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Library</title>
