Change page title and header

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Chocolate+Classical+Sans&family=Lexend:wght@100..900&family=Ranchers&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <title>Library</title>
+    <title>Joe's Library</title>
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <h1>My Library</h1>
+        <h1>Joe's Library</h1>
 
         <div class="header-buttons">
           <button class="add-book">＋</button>
