Remove initial cards from HTML

--- a/index.html
+++ b/index.html
@@ -20,55 +20,7 @@
         </div>
       </div>
 
-      <div class="card-container">
-        <div class="card">
-          <button class="remove-card">☓</button>
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">To Kill a Mockingbird</h2>
-            <h3 class="author">Harper Lee</h3>
-            <p class="page-count">336</p>
-            <p class="read">Not Read</p>
-          </div>
-          <button class="toggle-read">᠆</button>
-        </div>
-
-        <div class="card">
-          <button class="remove-card">☓</button>
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">The Alchemist</h2>
-            <h3 class="author">Paulo Coelho</h3>
-            <p class="page-count">208</p>
-            <p class="read">Read</p>
-          </div>
-          <button class="toggle-read">🗸</button>
-        </div>
-
-        <div class="card">
-          <button class="remove-card">☓</button>
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">The Catcher in the Rye</h2>
-            <h3 class="author">J.D. Salinger</h3>
-            <p class="page-count">288</p>
-            <p class="read">Not Read</p>
-          </div>
-          <button class="toggle-read">᠆</button>
-        </div>
-        
-        <div class="card">
-          <button class="remove-card">☓</button>
-          <div class="book-cover"></div>
-          <div class="book-details">
-            <h2 class="book-title">Mrs. Frisby and the Rats of NIMH</h2>
-            <h3 class="author">Robert C. O'Brien</h3>
-            <p class="page-count">233</p>
-            <p class="read">Read</p>
-          </div>
-          <button class="toggle-read">🗸</button>
-        </div>
-      </div>
+      <div class="card-container"></div>
 
       <dialog id="modal">
         <h4>Add a book to your library:</h4>
